// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldAreaFactory Creates a text field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="caldera-field-group caldera-field-area-text is-required form-group"
      >
        <label
          class="form-label"
          for="textFieldId"
        >
          First Name
           
          <span>
            *
          </span>
        </label>
        <text
          class="caldera-field caldera-field-text form-control"
          id="textFieldId"
          required=""
          type="text"
          value="roy"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="caldera-field-group caldera-field-area-text is-required form-group"
    >
      <label
        class="form-label"
        for="textFieldId"
      >
        First Name
         
        <span>
          *
        </span>
      </label>
      <text
        class="caldera-field caldera-field-text form-control"
        id="textFieldId"
        required=""
        type="text"
        value="roy"
      />
      <small
        class="text-muted form-text"
      >
        your first name
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`fieldAreaFactory Creates an select field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="caldera-field-group caldera-field-area-select is-required form-group"
      >
        <label
          class="form-label"
          for="selectFieldId"
        >
          Select Field Label
           
          <span>
            *
          </span>
        </label>
        <select
          class="form-control"
          id="selectFieldId"
          required=""
        >
          <option
            value="0"
          >
            Zero
          </option>
          <option
            value="1"
          >
            One
          </option>
          <option
            value="2"
          >
            Two
          </option>
        </select>
        <small
          class="text-muted form-text"
        >
          Select field description
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="caldera-field-group caldera-field-area-select is-required form-group"
    >
      <label
        class="form-label"
        for="selectFieldId"
      >
        Select Field Label
         
        <span>
          *
        </span>
      </label>
      <select
        class="form-control"
        id="selectFieldId"
        required=""
      >
        <option
          value="0"
        >
          Zero
        </option>
        <option
          value="1"
        >
          One
        </option>
        <option
          value="2"
        >
          Two
        </option>
      </select>
      <small
        class="text-muted form-text"
      >
        Select field description
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`fieldAreaFactory should create textarea 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="caldera-field-group caldera-field-area-textarea is-required form-group"
      >
        <label
          class="form-label"
          for="textArea1"
        >
          Your message
           
          <span>
            *
          </span>
        </label>
        <textarea
          class="form-control"
          cols="8"
          id="textArea1"
          maxlength="500"
          minlength="10"
          required=""
          rows="5"
        />
        <small
          class="text-muted form-text"
        >
          your first name
        </small>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="caldera-field-group caldera-field-area-textarea is-required form-group"
    >
      <label
        class="form-label"
        for="textArea1"
      >
        Your message
         
        <span>
          *
        </span>
      </label>
      <textarea
        class="form-control"
        cols="8"
        id="textArea1"
        maxlength="500"
        minlength="10"
        required=""
        rows="5"
      />
      <small
        class="text-muted form-text"
      >
        your first name
      </small>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
